# pitchsignals

./: .env.example  .gitignore  AGENT_DEPLOY.md  CONTRIBUTING.md  DATA_AND_FALLBACKS.md  HYPERFRAMES_PROMPT.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  PROJECT_EVALUATION.md  README.en.md  README.md  ROADMAP.md  ZHIHU_ACTIVITY_SUBMISSION.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/backtesting/: __init__.py  datasets.py  odds_snapshots.py  records.py  reports.py  runner.py
backend/app/core/: config.py  entities.py  llm.py  text.py
backend/app/data_sources/: agent_reach.py  base.py  football_data_fixtures_odds.py  football_data_odds.py  football_dataset_registry.py  football_match_context.py  football_odds_snapshot_csv.py  football_public.py  football_schedule.py  football_schedule_context.py  open_meteo.py  the_odds_api.py  web_search.py  world_football_elo.py  zhihu_search.py
backend/app/domain_packs/: base.py  basketball.py  elections.py  entertainment.py  finance.py  football.py  registry.py
backend/app/evidence/: scoring.py  store.py  (+1 more)
backend/scripts/: football_1_0_data_plan.py  football_data_club_backtest.py  football_data_multi_backtest.py  football_data_rolling_backtest.py  football_worldcup_backtest.py  governance_gate_smoke.py  horizon_odds_snapshot_smoke.py  model_governance_smoke.py  odds_snapshot_csv_audit.py  odds_snapshot_csv_normalize.py  odds_snapshot_normalizer_smoke.py  prediction_ledger_smoke.py  profile_lifecycle_smoke.py  resolve_the_odds_api_score.py  structured_football_feature_smoke.py
(+23 files in other folders)
